# aibot-multi-doc-chat

./: .gitignore  README.md  constants.py  ingest.py  main.py  model_loader.py  pdf_reader.py  pyproject.toml
